Updates from Overleaf

--- a/kththesis/examplethesis.tex
+++ b/kththesis/examplethesis.tex
@@ -80,7 +80,7 @@ Then, I want to thank the company Odiwi that welcomed me and helped me conduct m
 
 \indent 
 
-One of the biggest challenges of mobile development today lies in the high fragmentation of mobile platforms \cite{MobileDevChallenges} with developers building the same app over multiple platforms. A popular solution is cross-platform development, that is to say developing with a framework capable of using the same code for multiple platform builds. However, such cross-platform development does not concern web applications that developers still have to develop separately from mobile applications. To answer this problem, Google introduced in 2015 the concept of \textit{Progressive Web Apps} \cite{PWA_intro}, a term first coined by designer Frances Berriman and Google Chrome developer Alex Russel \cite{PWA_blog} \cite{PWApossibleUnifer}.
+One of the biggest challenges of mobile development today lies in the high fragmentation of mobile platforms \cite{MobileDevChallenges} with developers building the same app over multiple platforms. A popular solution is cross-platform development, that is to say developing with a framework capable of using the same code for multiple platform builds. However, such cross-platform development does not concern web applications that developers still have to develop separately from mobile applications. To answer this problem, Google introduced in 2015 the concept of \textit{Progressive Web Apps} \cite{PWA_intro}, a term first coined by designer Frances Berriman and Google Chrome developer Alex Russel \cite{PWA_blog, PWApossibleUnifer}.
 This chapter will introduce the concept of Progressive Web Apps and the objective of this work.
 
 \paragraph{}
@@ -91,8 +91,8 @@ Progressive Web Apps have become more and more popular since they were introduce
 
 \section{Research Questions}
 
-Due to their cross-platform capabilities, Progressive Web Apps seem like a promising alternative to native development. Their small size and offline capability makes them even more attractive. However, this should not come at the cost of app performance and user experience, especially regarding to user interface performance. The performance of a user interface can be evaluated with two key elements: its responsiveness (how fast it can respond to user input) and its animation performance which we will refer to as smoothness. 
-This thesis will focus on one aspect of the user interface, that is the smoothness of mobile applications. It will aim at answering the following question: 
+Due to their cross-platform capabilities, Progressive Web Apps seem like a promising alternative to native development. Their small size and offline capability makes them even more attractive. However, this should not come at the cost of app performance and user experience, especially regarding user interface performance. The performance of a user interface can be evaluated with two key elements: its responsiveness (how fast it can respond to user input) and its animation performance which we will refer to as smoothness performance. 
+This thesis will focus on one aspect of the user interface, that is the smoothness performance of mobile applications. It will aim at answering the following question: 
 \begin{center}
     \textit{Are Progressive Web Apps as efficient as Mobile Applications in terms of smoothness?}
 \end{center}
@@ -107,7 +107,7 @@ The smoothness performance of the applications will be evaluated with two aspect
 
 \medskip
 
-\textbf{R3:} How much resources are used to achieve this smoothness ?
+\textbf{R3:} How many resources are used to achieve this smoothness?
 
 
 \chapter{Background}
