--- a/kththesis/Trash.tex
+++ b/kththesis/Trash.tex
@@ -472,6 +472,9 @@ Thus, the most meaningful comparison, in my opinion, is the time between the tim
 \end{enumerate}
 \fi
 
+\todo[inline, color=cyan!20]{Can I just erase since I don't look at graphic buffers? because it will just repeat the preceding paragraph}
+Two aspects of memory will be measured to compare Native, Hybrid and Progressive Web Apps: the RAM and the memory used for graphics buffer queue. For Progressive Web Apps, those measures will be the result of the addition of the 3 processes on the foreground: the Browser, the Renderer and the GPU processes.
+
 \fi
     
 \section{Comparing CPU and Memory}
