--- a/kththesis/references.bib
+++ b/kththesis/references.bib
@@ -76,6 +76,23 @@
     url={https://staff.fnwi.uva.nl/a.s.z.belloum/MSctheses/MScthesis_Tjarco.pdf}
 }
 
+@inproceedings{willocx2016comparing,
+  title={Comparing performance parameters of mobile app development strategies},
+  author={Willocx, Michiel and Vossaert, Jan and Naessens, Vincent},
+  booktitle={Proceedings of the International Conference on Mobile Software Engineering and Systems},
+  pages={38--47},
+  year={2016}
+}
+
+@inproceedings{delia2017approaches,
+  title={Approaches to mobile application development: comparative performance analysis},
+  author={Del{\'\i}a, Lisandro and Galdamez, Nicol{\'a}s and Corbalan, Leonardo and Pesado, Patricia and Thomas, Pablo},
+  booktitle={2017 Computing Conference},
+  pages={652--659},
+  year={2017},
+  organization={IEEE}
+}
+
 @inproceedings{gambhir2018analysis,
   title={Analysis of cache in service worker and performance scoring of progressive web application},
   author={Gambhir, Abhi and Raj, Gaurav},
